--- a/config.env
+++ b/config.env
@@ -2,3 +2,6 @@ MYSQL_HOST='127.0.0.1'
 MYSQL_USER='root'
 MYSQL_PASSWORD=''
 MYSQL_DATABASE='vestica_app'
+
+JWT_SECRET =  VTHVUIUTEVUIQYUVOEITT
+JWT_EXPIRE = 2d
