--- a/config.env
+++ b/config.env
@@ -1,7 +1,8 @@
-MYSQL_HOST='127.0.0.1'
-MYSQL_USER='root'
-MYSQL_PASSWORD=''
-MYSQL_DATABASE='vestica_app'
+MYSQL_HOST= "127.0.0.1"
+MYSQL_USER="donkennie"
+MYSQL_PASSWORD="Owooluwa@123"
+MYSQL_DATABASE="vestica_app"
+MYSQL_PORT= 8080
 
 JWT_SECRET =  VTHVUIUTEVUIQYUVOEITT
 JWT_EXPIRE = 2d
